[gd_scene load_steps=7 format=3 uid="uid://s8du5lcibl2t"]

[ext_resource type="Script" uid="uid://bwu7iucp707t8" path="res://scenes/task_scene.gd" id="1_miwrg"]
[ext_resource type="Texture2D" uid="uid://c0jkwxfva6v4j" path="res://assets/任務底圖.png" id="2_kxowd"]
[ext_resource type="Texture2D" uid="uid://bsen2u074p6kf" path="res://assets/back_picture_256.png" id="3_uxak6"]
[ext_resource type="Texture2D" uid="uid://yhdjlqkbg6mb" path="res://assets/button_get_128.png" id="5_uxak6"]
[ext_resource type="Texture2D" uid="uid://dhnucbno7t6iu" path="res://assets/任務圖示.png" id="7_gutmt"]
[ext_resource type="Texture2D" uid="uid://eml4bkdcp6kr" path="res://assets/coin_icon_128x128.png" id="9_p4jqa"]

[node name="TaskScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_miwrg")

[node name="TaskDescLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RewardLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="SubmitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1104.0
offset_bottom = 1648.0
texture = ExtResource("2_kxowd")

[node name="Back_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_top = -16.0
offset_right = 290.0
offset_bottom = 274.0
texture_normal = ExtResource("3_uxak6")
metadata/_edit_group_ = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 288.0
offset_right = 624.0
offset_bottom = 425.0
theme_override_colors/font_color = Color(0.396722, 0.169124, 0.138925, 1)
theme_override_font_sizes/font_size = 100
text = "Task"

[node name="Task_3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Task_3"]
layout_mode = 0
offset_left = -58.0
offset_top = 894.0
offset_right = 1478.0
offset_bottom = 1918.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_gutmt")

[node name="Label" type="Label" parent="Task_3"]
layout_mode = 0
offset_left = 136.0
offset_top = 1208.0
offset_right = 672.0
offset_bottom = 1431.0
theme_override_font_sizes/font_size = 80
text = "Task 3
"

[node name="Req_Label" type="Label" parent="Task_3"]
layout_mode = 0
offset_left = 176.0
offset_top = 1304.0
offset_right = 592.0
offset_bottom = 1527.0
theme_override_font_sizes/font_size = 60
text = "REQ"

[node name="Reward_Label" type="Label" parent="Task_3"]
layout_mode = 0
offset_left = 552.0
offset_top = 1312.0
offset_right = 968.0
offset_bottom = 1535.0
theme_override_colors/font_color = Color(0.512695, 0.58576, 0.93355, 1)
theme_override_font_sizes/font_size = 60
text = "REW"

[node name="Task_2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Task_2"]
layout_mode = 0
offset_left = -60.0
offset_top = 520.0
offset_right = 1476.0
offset_bottom = 1544.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_gutmt")

[node name="Label" type="Label" parent="Task_2"]
layout_mode = 0
offset_left = 136.0
offset_top = 816.0
offset_right = 728.0
offset_bottom = 1039.0
theme_override_font_sizes/font_size = 80
text = "Task 2
"

[node name="Req_Label" type="Label" parent="Task_2"]
layout_mode = 0
offset_left = 174.0
offset_top = 922.0
offset_right = 542.0
offset_bottom = 1145.0
theme_override_font_sizes/font_size = 60
text = "REQ"

[node name="Reward_Label" type="Label" parent="Task_2"]
layout_mode = 0
offset_left = 544.0
offset_top = 928.0
offset_right = 912.0
offset_bottom = 1151.0
theme_override_colors/font_color = Color(0.513726, 0.584314, 0.933333, 1)
theme_override_font_sizes/font_size = 60
text = "REW"

[node name="Task_1" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Task_1"]
layout_mode = 0
offset_left = -64.0
offset_top = 168.0
offset_right = 1472.0
offset_bottom = 1192.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_gutmt")

[node name="Label" type="Label" parent="Task_1"]
layout_mode = 0
offset_left = 152.0
offset_top = 472.0
offset_right = 728.0
offset_bottom = 688.0
theme_override_font_sizes/font_size = 80
text = "Task1"

[node name="Req_Label" type="Label" parent="Task_1"]
layout_mode = 0
offset_left = 168.0
offset_top = 584.0
offset_right = 544.0
offset_bottom = 728.0
theme_override_font_sizes/font_size = 60
text = "REQ"

[node name="Reward_Label" type="Label" parent="Task_1"]
layout_mode = 0
offset_left = 552.0
offset_top = 583.0
offset_right = 928.0
offset_bottom = 727.0
theme_override_colors/font_color = Color(0.513726, 0.584314, 0.933333, 1)
theme_override_font_sizes/font_size = 60
text = "REW"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 757.0
offset_top = 427.0
offset_right = 1781.0
offset_bottom = 1451.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_uxak6")
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 780.0
offset_right = 1776.0
offset_bottom = 1804.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_uxak6")
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 752.0
offset_top = 1151.0
offset_right = 1776.0
offset_bottom = 2175.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_uxak6")
stretch_mode = 0

[node name="Coin" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureCoin" type="TextureRect" parent="Coin"]
layout_mode = 0
offset_left = 880.0
offset_top = -8.0
offset_right = 1008.0
offset_bottom = 120.0
texture = ExtResource("9_p4jqa")

[node name="Label" type="Label" parent="Coin"]
layout_mode = 0
offset_left = 688.0
offset_top = -8.0
offset_right = 779.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(1, 0.807843, 0.211765, 1)
theme_override_font_sizes/font_size = 80
text = "10"

[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
